Bug 478521 - RGB/HSX options disappear from the Specific color selector when switching to a layer in non-RGB space
Summary: RGB/HSX options disappear from the Specific color selector when switching to ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 5.2.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-14 19:37 UTC by paleh
Modified: 2024-01-28 15:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description paleh 2023-12-14 19:37:32 UTC
STEPS TO REPRODUCE
1. Create a document in RGBA space.
2. Open the Specific color selector docker. It should be in RGBA space.
3. Create a layer in Grayscale space (e.g. a transparency mask). Select this layer in the layers docker.
4. In the specific color selector switch the mode between RGB and HSX

OBSERVED RESULT
The RGB/HSX options disappear. Switching to layers in RGBA doesn't bring them back. However, changing the space of the specific color selector to something else and back to RGBA does.

EXPECTED RESULT
RGB/HSX options don't disappear as long as the color selector is in RGBA space.

SOFTWARE/OS VERSIONS
Linux: Ubuntu 22.04
Qt Version: 5.15.7
Appimage

ADDITIONAL INFORMATION
This was present in 5.1.5 and is present on master (git-1fc417ae3e)
Comment 1 Freya Lupen 2023-12-14 23:27:49 UTC
Confirmed.
Comment 2 Bug Janitor Service 2024-01-18 03:51:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2053
Comment 3 Freya Lupen 2024-01-28 15:48:19 UTC
Git commit bb071e096fc431bf00a3f4e4f5a64ba69fedd51c by Freya Lupen.
Committed on 28/01/2024 at 15:47.
Pushed by freyalupen into branch 'master'.

Add colorspace lock to Specific Color Selector

Previously, unless the CS combobox was changed, the internal colorspace
would match the layer, without changing the UI. When clicking the
RGB/HSV button in a nonRGB layer, it would then hide itself
despite the UI still being in RGB.

Now there's a lock to indicate whether the colorspace should use the
current layer or a colorspace specified by the user in the combobox,
and the UI behaves accordingly.

Also, simplifies KisSpecificColorSelectorWidget::updateHsvSelector().

M  +32   -44   plugins/dockers/specificcolorselector/kis_specific_color_selector_widget.cc
M  +3    -2    plugins/dockers/specificcolorselector/kis_specific_color_selector_widget.h
M  +2    -0    plugins/dockers/specificcolorselector/specificcolorselector_dock.cc
M  +10   -0    plugins/dockers/specificcolorselector/wdgSpecificColorSelectorWidget.ui

https://invent.kde.org/graphics/krita/-/commit/bb071e096fc431bf00a3f4e4f5a64ba69fedd51c